fix title overflow

--- a/src/style/item.css
+++ b/src/style/item.css
@@ -9,7 +9,9 @@
 }
 .item__title {
     margin-bottom: 20px;
+    overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .item__text {
     font-size: 16px;
